RESOLVED FIXED198588
[macOS] Stop calling -[NSDraggingItem setItem:]
https://bugs.webkit.org/show_bug.cgi?id=198588
Summary [macOS] Stop calling -[NSDraggingItem setItem:]
Andy Estes
Reported 2019-06-05 16:49:23 PDT
[macOS] Stop calling -[NSDraggingItem setItem:]
Attachments
Patch (22.06 KB, patch)
2019-06-05 16:54 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2019-06-05 16:49:41 PDT
Andy Estes
Comment 2 2019-06-05 16:54:42 PDT
EWS Watchlist
Comment 3 2019-06-05 16:57:04 PDT
Attachment 371450 [details] did not pass style-queue: ERROR: Tools/TestRunnerShared/spi/AppKitTestSPI.h:42: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2019-06-05 20:24:27 PDT
Comment on attachment 371450 [details] Patch Clearing flags on attachment: 371450 Committed r246141: <https://trac.webkit.org/changeset/246141>
WebKit Commit Bot
Comment 5 2019-06-05 20:24:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.