[macOS] Stop calling -[NSDraggingItem setItem:] https://bugs.webkit.org/show_bug.cgi?id=198588 <rdar://problem/48297453>

On macOS Catalina, use -[NSDraggingItem _initWithItem:] instead.

Reviewed by Wenson Hsieh.

* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Fixed up file paths in the
TestRunnerShared group.

* DumpRenderTree/mac/DumpRenderTreeDraggingInfo.mm:
(-[DumpRenderTreeDraggingInfo enumerateDraggingItemsWithOptions:forView:classes:searchOptions:usingBlock:]):
Changed to call -[NSDraggingItem _initWithItem:] when available.

* TestRunnerShared/spi/AppKitTestSPI.h: Renamed from
Tools/DumpRenderTree/mac/AppKitTestSPI.h and moved NSDraggingItem internal interface
declarations here from DumpRenderTree.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
Added TestRunnerShared/spi/AppKitTestSPI.h.

* TestWebKitAPI/mac/TestDraggingInfo.mm:
(-[TestDraggingInfo enumerateDraggingItemsWithOptions:forView:classes:searchOptions:usingBlock:]):
Changed to call -[NSDraggingItem _initWithItem:] when available.


Canonical link: https://commits.webkit.org/212596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246141 268f45cc-cd09-0410-ab3c-d52691b4dbfc