Tools/DumpRenderTree/mac/DumpRenderTreeDraggingInfo.mm
@@ -31,16 +31,13 @@
 
 #if !PLATFORM(IOS_FAMILY)
 
+#import "AppKitTestSPI.h"
 #import "DumpRenderTree.h"
 #import "DumpRenderTreeFileDraggingSource.h"
 #import "DumpRenderTreePasteboard.h"
 #import "EventSendingController.h"
 #import <WebKit/WebKit.h>
 #import <wtf/RetainPtr.h>
-
-@interface NSDraggingItem ()
-- (void)setItem:(id)item;
-@end
 
 @interface DumpRenderTreeFilePromiseReceiver : NSFilePromiseReceiver {
     RetainPtr<NSArray<NSString *>> _promisedUTIs;
@@ -277,8 +274,12 @@ static NSMutableArray<NSFilePromiseReceiver *> *allFilePromiseReceivers()
         [receiver setDraggingSource:draggingSource];
         [allFilePromiseReceivers() addObject:receiver.get()];
 
+#if HAVE(NSDRAGGINGITEM_INITWITHITEM)
+        auto item = adoptNS([[NSDraggingItem alloc] _initWithItem:receiver.get()]);
+#else
         auto item = adoptNS([[NSDraggingItem alloc] initWithPasteboardWriter:(id <NSPasteboardWriting>)receiver.get()]); // FIXME: <https://webkit.org/b/194060> Pass an object of the right type.
         [item setItem:receiver.get()];
+#endif
 
         block(item.get(), 0, &stop);
         if (stop)
