Tools/TestRunnerShared/spi/AppKitTestSPI.h
@@ -39,5 +39,17 @@ extern NSString *NSTextInputReplacementRangeAttributeName;
 
 #endif
 
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101500
+#define HAVE_NSDRAGGINGITEM_INITWITHITEM 1
+#endif
+
+@interface NSDraggingItem ()
+#if HAVE(NSDRAGGINGITEM_INITWITHITEM)
+- (instancetype)_initWithItem:(id)item;
+#else
+- (void)setItem:(id)item;
+#endif
+@end
+
 #endif // PLATFORM(MAC)
 
